--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Yiqing Li
-  image             : https://github.com/yiqingl8/yiqingl8.github.io/blob/main/picture.jpg?raw=true
+  image             : https://github.com/yiqingl8/yiqingl8.github.io/blob/main/picture.png?raw=true
 # dribbble          : your_username
   email             : yiqingl8@illinois.edu
 # facebook          : your_username
