--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,9 +1,9 @@
-- name: Adobe Photoshop
+- name: Powerbi
   percentage: 95
   level: Expert
   color: info
 
-- name: Adobe Illustrator
+- name: Tableau
   percentage: 90
   level: Expert
   color: success
