--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,24 +1,14 @@
-- name: Powerbi
-  percentage: 90
+- name: Python
+  percentage: 95
   level: Expert
   color: danger
 
 - name: SQL
-  percentage: 80
+  percentage: 90
   level: Expert
-  color: secondary
+  color: 
 
-- name: Python
+- name: CSS
   percentage: 70
   level: Expert
   color: secondary  
-  
-- name: Tableau
-  percentage: 70
-  level: Advanced
-  color: secondary
-
-  - name: R
-  percentage: 70
-  level: Advanced
-  color: secondary
